--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sneaks-app",
+  "name": "Sneaks-App",
   "version": "0.1.0",
   "homepage": "http://druv5319.github.io/Sneaks-App",
   "private": true,
