--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "sneaks-app",
   "version": "0.1.0",
-  "homepage": "https://druv5319.github.io/sneaks-app/",
+  "homepage": "https://druv5319.github.io/sneaks-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
-    "http2": "^3.3.7",
-    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "sneaks-api": "^1.0.3",
-    "stockx-api": "^1.0.9"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
