--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sneaks-app",
   "version": "0.1.0",
-  "homepage": "https://druv5319.github.io/sneaks-app",
+  "homepage": "https://sneaks-app.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
